Certificate Transparency: Fix Pilot log ID comparison.

Only 32 bytes of the Log ID should be compared, not the trailing null.

BUG=608787

Review-Url: https://codereview.chromium.org/1950463002
Cr-Commit-Position: refs/heads/master@{#391480}

Former-commit-id: 2ed9e868847dcc8ab0b60ed22a87d6a8fc56cf96